# home-agent

./: .editorconfig  .env.sample  .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: ollama-intermediary-agent.md  session-flow.md
scripts/: google-calendar.sh  restart-home-agent.sh
systemd/: home-agent.service  opencode-server.service
telegram_reader/: config.py  main.py  opencode_client.py
